// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _accessKey="V" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _alert=true 1`] = `
<kol-input-email _alert="" _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _disabled=true 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--disabled kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled" disabled="" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _hint="Hint" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-email-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-email-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-email _touched="" _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="input-email-error-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-email-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _readOnly=true 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--read-only kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--readonly" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _shortKey="S" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _accessKey="V" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _alert=true 1`] = `
<kol-input-email _alert="" _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _disabled=true 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--disabled kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled" disabled="" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _hint="Hint" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-email-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-email-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-email _touched="" _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="input-email-error-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-email-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _readOnly=true 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--read-only kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--readonly" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _shortKey="S" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] _touched=true 1`] = `
<kol-input-email _touched="" _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--touched kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _suggestions=["email1@example.com","email2@example.com","email3@example.com"] 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" list="input-email-list-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
            <datalist id="input-email-list-nonce">
              <option value="email1@example.com"></option>
              <option value="email2@example.com"></option>
              <option value="email3@example.com"></option>
            </datalist>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" _touched=true 1`] = `
<kol-input-email _touched="" _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-form-field--touched kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;

exports[`kol-input-email should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="email@example.com" 1`] = `
<kol-input-email _value="email@example.com">
  <template shadowrootmode="open">
    <div class="email has-value kol-form-field kol-input-email">
      <label class="kol-form-field__label" htmlfor="input-email-nonce" id="input-email-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-email-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" type="email" value="email@example.com">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-email>
`;
